document error response type
